# pandas-mcp-server

./: .gitignore  README.md  build.sh  client.py  diagnose.py  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements.txt  sample_sales.csv  server.py  test_data.csv  test_server.py
charts/: bar_sales_bar_20250825_110843.html  line_sales_line_20250825_110843.html  matrix_features_heatmap_20250825_110830.html  pie_sales_pie_20250825_105857.html  scatter_features_scatter_20250825_110830.html  scatter_features_scatter_20250825_110843.html
core/: __init__.py  config.py  data_loader.py  data_types.py  execution.py  metadata.py  tools.py  visualization.py
core/charts/: __init__.py  bar_chart.py  base_chart.py  heatmap_chart.py  line_chart.py  pie_chart.py  scatter_chart.py
data/: customers.csv  product_inventory.json  sales_data.csv
storage/: __init__.py  dataframe_manager.py
test/: test.py  test_data_loader.py  test_execution.py  test_metadata.py  test_open_ai_client.py  test_server.py  test_visualization.py
utils/: __init__.py  formatters.py  security.py  validators.py
